--- a/etc/supervisord.d/shadowsocks.conf
+++ b/etc/supervisord.d/shadowsocks.conf
@@ -1,9 +1,9 @@
 [program:shadowsocksr]                                                                            
-command=/usr/bin/python /root/shadowsocksr/shadowsocks/server.py -c /root/shadowsocksr/shadowsocks/user-config.json
+command=
 priority=12
 autostart=false
 startsecs=0
 autorestart=true
 redirect_stderr=true
-stdout_logfile=/var/log/shadowsocksr.log
+stdout_logfile=/var/log/shadowsocks.log
 stdout_logfile_maxbytes=1MB
