--- a/etc/supervisord.d/shadowsocks.conf
+++ b/etc/supervisord.d/shadowsocks.conf
@@ -1,4 +1,4 @@
-[program:shadowsocksr]                                                                            
+[program:shadowsocks]                                                                            
 command=
 priority=12
 autostart=false
