--- a/etc/supervisord.d/shadowsocks.conf
+++ b/etc/supervisord.d/shadowsocks.conf
@@ -1,5 +1,5 @@
 [program:shadowsocks]                                                                            
-command=
+command=ssserver -c /etc/ss_config.json
 priority=12
 autostart=false
 startsecs=0
