--- a/etc/supervisord.d/shadowsocksr.conf
+++ b/etc/supervisord.d/shadowsocksr.conf
@@ -1,5 +1,5 @@
 [program:shadowsocksr]                                                                            
-command=/usr/bin/python /root/shadowsocksr/shadowsocks/server.py -c /root/shadowsocksr/shadowsocks/user-config.json
+command=/usr/bin/python /root/shadowsocksr/shadowsocks/server.py -c /etc/ssr_config.json
 priority=12
 autostart=false
 startsecs=0
