--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -9,7 +9,7 @@ logfile_maxbytes=10MB
 logfile_backups=2
 loglevel=info
 pidfile=/var/run/supervisord.pid
-nodaemon=true
+nodaemon=false
 minfds=1024
 minprocs=200
 
